# shortener

./: Cargo.toml  README.md  wrangler.toml
src/: lib.rs  utils.rs
